derive/tests/snapshots/hooks_all_six/Potion/delete_potion_by_name.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `Potion` row in the `potion` table whose value matches the value from the unique single-column btree index on the `name` column.*/
    pub fn delete_potion_by_name<'a>(
        &'a self,
        name: &str,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use ::spacetimedsl::itertools::Itertools;
        let name = name.to_string();
        let row_to_delete = self.db().potion().name().find(&name);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "potion".into(),
                    column_names_and_row_values: format!("{{ name : {} }}", & name)
                        .into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "potion".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", PotionId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        use self::BeforePotionDeleteHook;
        crate::spacetimedsl::DSLMethodHooks::before_potion_delete(self, &row_to_delete)?;
        match self.db().potion().id().delete(&row_to_delete.id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        use self::AfterPotionDeleteHook;
        crate::spacetimedsl::DSLMethodHooks::after_potion_delete(self, &row_to_delete)?;
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "potion".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
        });
    }
}
