derive/tests/snapshots/hooks_all_six/Potion/get_all_potions.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `potion` table.
    pub fn get_all_potions<'a>(&'a self) -> impl Iterator<Item = Potion> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().potion().iter()
    }
}
