derive/tests/snapshots/hooks_all_six/Potion/get_potion_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Potion` from the `potion` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_potion_by_id<'a>(
        &'a self,
        id: impl Into<PotionId> + Clone,
    ) -> Result<Potion, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().potion().id().find(id.clone().into().value()) {
            Some(potion) => Ok(potion),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "potion".into(),
                    column_names_and_row_values: format!(
                        "{{ , id : {}  }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Potion` from the `potion` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_potion_by_id<'a>(
        &'a self,
        id: impl Into<PotionId> + Clone,
    ) -> Result<Potion, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().potion().id().find(id.clone().into().value()) {
            Some(potion) => Ok(potion),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "potion".into(),
                    column_names_and_row_values: format!(
                        "{{ , id : {}  }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
